[FIX] Overlay Overflow on small resolutions or high scales

--- a/src/frontend/components/UI/QuestsViewer/index.module.scss
+++ b/src/frontend/components/UI/QuestsViewer/index.module.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: var(--space-lg-fixed);
   padding: var(--space-2lg-fixed);
+  width: 60vw;
+  flex-shrink: 1;
 }
 
 .questsViewerContainer {
@@ -15,8 +17,9 @@
 }
 
 .detailsWrapper {
-  width: 1045px;
-  min-width: 800px;
+  width: -webkit-fill-available;
+  width: 50vw;
+  min-width: 400px;
   max-width: 1063px !important;
 
   @media (max-width: 1300px) {
